--- a/roles/wireguard/templates/nftables.conf.j2
+++ b/roles/wireguard/templates/nftables.conf.j2
@@ -43,7 +43,7 @@ table inet filter {
         # for IPv4 and IPv6.
         tcp dport { 22, 80, 443} accept
 
-        # coturn
+        # coTURN
         tcp dport { 3478, 5349 } accept
         udp dport { 3478, 5349 } accept
 
